<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="#FFE5B4" >
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical"
		android:padding="10dp" >
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp"
			android:layout_marginTop="20dp"
			android:gravity="center"
			android:text="@string/tvSignUp"
			android:textColor="#284BDA"
			android:textSize="15pt"
			android:textStyle="italic" />
		<EditText
			android:id="@+id/etFirstname"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp"
			android:layout_marginTop="20dp"
			android:hint="@string/etFirstname" />
		<EditText
			android:id="@+id/etLastname"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp"
			android:layout_marginTop="20dp"
			android:hint="@string/etLastname" />
		<EditText
			android:id="@+id/etEmail"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp"
			android:layout_marginTop="20dp"
			android:hint="@string/etEmail"
			android:inputType="textEmailAddress" />
		<EditText
			android:id="@+id/etPassword"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp"
			android:layout_marginTop="20dp"
			android:hint="@string/etPassword"
			android:inputType="textPassword" />
		<EditText
			android:id="@+id/etCPassword"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp"
			android:layout_marginTop="20dp"
			android:hint="@string/etCPassword"
			android:inputType="textPassword" />
		<Button
			android:id="@+id/btnSignUp"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp"
			android:layout_marginTop="20dp"
			android:drawableRight="@android:drawable/ic_lock_lock"
			android:hint="@string/btnSignUp" />
	</LinearLayout>
</ScrollView>